--- a/.github/workflows/master_informesdash.yml
+++ b/.github/workflows/master_informesdash.yml
@@ -1,67 +1,82 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - informesdash
+name: Build and deploy Flask + Vue.js app to Azure App Service
 
 on:
   push:
-    branches:
-      - master
-  workflow_dispatch:
+    branches: 
+      - main
+
+env:
+  WEBAPP_NAME: '<your-web-app>'             # Replace with the name of your Azure web app
+  RESOURCE_GROUP: '<your-resource-group>'   # Replace with the name of your Resource Group
 
 jobs:
-  build:
+  build-and-test:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.6
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12
+
+    - name: Install and build Vue.js project
+      run: |
+        npm install
+        npm run build
+
+    - name: Create and start virtual environment
+      run: |
+        python3 -m venv venv
+        source venv/bin/activate
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: test with PyTest
+      run: pytest --cov=app --cov-report=xml
+
+    - name: Upload artifact for deployment jobs
+      uses: actions/upload-artifact@v2
+      with:
+        name: python-app
+        path: |
+          . 
+          !node_modules/
+          !venv/
+  
+  deploy-to-webapp:
+    needs: build-and-test
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python version
-        uses: actions/setup-python@v1
+      - uses: actions/download-artifact@v2
         with:
-          python-version: '3.11'
+          name: python-app
+          path: .
 
-      - name: Create and start virtual environment
+      - name: Log in to Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL }}
+
+      - name: Configure deployment and runtime settings on the webapp
         run: |
-          python -m venv venv
-          source venv/bin/activate
+          az configure --defaults ${{ env.RESOURCE_GROUP }}
+          az webapp config appsettings --name ${{ env.WEBAPP_NAME }} --settings \
+              SCM_DO_BUILD_DURING_DEPLOYMENT=true \
+              FLASK_ENV=production 
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+          az webapp config set --name ${{ env.WEBAPP_NAME }} \
+            --startup-file "gunicorn --bind=0.0.0.0 --timeout 600 app:app"
 
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to App Service
         uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
         with:
-          app-name: 'informesdash'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_48F1948BC7A94D31B013E57EF28B9563 }}
+          app-name: ${{ env.WEBAPP_NAME}}
