--- a/.github/workflows/master_ifordash.yml
+++ b/.github/workflows/master_ifordash.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 env:
-  WEBAPP_NAME: '<your-web-app>'             # Replace with the name of your Azure web app
-  RESOURCE_GROUP: '<your-resource-group>'   # Replace with the name of your Resource Group
+  WEBAPP_NAME: 'ifordash'             # Replace with the name of your Azure web app
+  RESOURCE_GROUP: 'exampleapss'   # Replace with the name of your Resource Group
 
 jobs:
   build-and-test:
