--- a/.github/workflows/master_informesdash.yml
+++ b/.github/workflows/master_informesdash.yml
@@ -1,82 +1,54 @@
-name: Build and deploy Flask + Vue.js app to Azure App Service
+name: Build and deploy Python app to Azure Web App - informesdash
 
 on:
   push:
-    branches: 
-      - main
-
-env:
-  WEBAPP_NAME: '<your-web-app>'             # Replace with the name of your Azure web app
-  RESOURCE_GROUP: '<your-resource-group>'   # Replace with the name of your Resource Group
+    branches:
+      - master
+  workflow_dispatch:
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.6
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12
-
-    - name: Install and build Vue.js project
-      run: |
-        npm install
-        npm run build
-
-    - name: Create and start virtual environment
-      run: |
-        python3 -m venv venv
-        source venv/bin/activate
-
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-
-    - name: test with PyTest
-      run: pytest --cov=app --cov-report=xml
-
-    - name: Upload artifact for deployment jobs
-      uses: actions/upload-artifact@v2
-      with:
-        name: python-app
-        path: |
-          . 
-          !node_modules/
-          !venv/
-  
-  deploy-to-webapp:
-    needs: build-and-test
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v4
+
+      - name: Set up Python version
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.11'
+
+      - name: Create and start virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      
+
+      
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
         with:
           name: python-app
-          path: .
 
-      - name: Log in to Azure CLI
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL }}
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
-      - name: Configure deployment and runtime settings on the webapp
-        run: |
-          az configure --defaults ${{ env.RESOURCE_GROUP }}
-          az webapp config appsettings --name ${{ env.WEBAPP_NAME }} --settings \
-              SCM_DO_BUILD_DURING_DEPLOYMENT=true \
-              FLASK_ENV=production 
-
-          az webapp config set --name ${{ env.WEBAPP_NAME }} \
-            --startup-file "gunicorn --bind=0.0.0.0 --timeout 600 app:app"
-
-      - name: Deploy to App Service
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
+        id: deploy-to-webapp
         with:
-          app-name: ${{ env.WEBAPP_NAME}}
+          app-name: 'informesdash'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_48F1948BC7A94D31B013E57EF28B9563 }}
